fix: updated styling so plates do not overlap border

--- a/src/components/Barbell/LoadedBarbell.css
+++ b/src/components/Barbell/LoadedBarbell.css
@@ -31,7 +31,7 @@
 /* Plates */
 
 .barbell--plate-holder {
-    width: 123px;
+    width: 130px;
     height: 149px;
     background-color: #c5c5c5;
     border: #9a9a9a;
